# pyslfp

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  errors.txt  nohup.out  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  tutorials.rst
examples/: benchmarks.ipynb  ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  examples.ipynb  regionmask.ipynb  reproducefigures.ipynb  test.py
for_paper/: GRACE_inversion.py  GRACE_inversion_tests.py  WMB_bias.py  altimetry_bias.py  altimetry_extended_bias.py  altimetry_extended_inversion.py  altimetry_extended_utils.py  altimetry_inversion.py  altimetry_inversion_simple.py  altimetry_utils.py  basins.py  compare_inversion.py  download.py  forward_adjoint.py  grace_bias.py  grace_inversion.py  grace_noise_sensitivity.py  grace_prior_sensitivity.py  grace_utils.py  hydro.py  joint_extended_inversion.py  joint_inversion.py  joint_utils.py  ocean_altimetry_inversion.py  ocean_altimetry_inversion_1.py  ocean_altimetry_inversion_2.py  oceans.py  optimal_weighting.py  plot_utils.py  simple_GRACE_inversion.py  simple_ocean_altimetry_inversion.py  simplified_altimetry.py  tide_gauge_inversion.py
for_paper/output_plots_altimetry_inversion/: altimetry_metrics.txt
for_paper/output_plots_grace_inversion/: grace_metrics.txt
for_paper/output_plots_joint_inversion/: joint_metrics.txt
oldsolver/: SLmod.py
pyslfp/: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  __init__.py  analytical_ice.py  core.py  downloader.py  fields.py  finger_print.py  ice_models.py  ice_ng.py  love_numbers.py  observation_operators.py  operators.py  operators_old.py  physical_parameters.py  physics.py  plot.py  plotting.py  regions.py  solver.py  state.py  utils.py
pyslfp/data/: __init__.py  config.py  downloader.py  tide_gauges.py
pyslfp/ice/: __init__.py  analytical_ice.py  hi_res_topo.py  ice_models.py  ice_ng.py
pyslfp/linear_operators/: __init__.py  altimetry.py  grace.py  loads.py  physics.py  projection.py  spatial.py  tide_gauges.py  utils.py
pyslfp/pyslfp/: finger_print_moving_coastlines.py
sandbox/: ex1.py  ex4.py  ex6.py
source/: conf.py  index.rst
tests/: off_test_operators.py  ptest_finger_print.py  ptest_love_numbers.py  ptest_operators.py  ptest_physical_parameters.py  test_core.py  test_downloader.py  test_finger_print.py  test_fingerprint.py  test_ice_ng.py  test_operators.py  test_physical_parameters.py  test_physics.py  test_plot.py  test_plotting.py  test_regions.py  test_state.py  test_utils.py
tutorials/: t1.ipynb  t1.py  t2.ipynb  t2.py  t3.ipynb  t3.py  t4.ipynb  t4.py  t5.ipynb  t6.ipynb  t7.ipynb  t7_old.ipynb  tutorial1.ipynb  tutorial2.ipynb
work/: altimetry.py  altimetry2.py  ex1.ipynb  ex1.py  ex10.py  ex11.py  ex12.py  ex13.py  ex3.py  ex5.py  ex7.py  ex8.py  ex9.py  grace.py  grace2.py  grace3.py  iho_regions.py  joint_inversions.py  low_rank.py  new_interface.py  old_vs_new.py  refactoring.py  repro.ipynb
(+124 files in other folders)
