[tool.poetry]
name = "pyslfp"
version = "0.1.5"
description = "Library for computing elastic sea level fingerprints"
authors = ["David Al-Attar and Dan Heathcote"]
readme = "README.md"
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.26.0"
scipy = ">=1.0.0"
pyshtools = ">=4.0.0"
matplotlib = ">=3.0.0"
pyqt6 = ">=6.0.0"
Cartopy = "^0.23.0"
pytest = "^8.3.3"
jupyter = "^1.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
