[tool.poetry]
name = "pyslfp"
version = "0.1.5"
description = "Package for computing elastic sea level fingerprints"
authors = ["David Al-Attar and Dan Heathcote"]
readme = "README.md"
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.26.0"
scipy = ">=1.0.0"
pyshtools = ">=4.0.0"
matplotlib = ">=3.0.0"
pyqt6 = ">=6.0.0"
Cartopy = "^0.23.0"


[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.tutorials]
optional = true

[tool.poetry.group.tutorials.dependencies]
jupyter = "^1.1.1"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
jupyter = "^1.1.1"
pygeoinf = {git = "https://github.com/da380/pygeoinf", rev = "develop"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
