[tool.poetry]
name = "pyslfp"
version = "2.0.0"
description = "Package for computing elastic sea level fingerprints"
authors = ["David Al-Attar and Dan Heathcote"]
readme = "README.md"
license = "BSD-3-Clause"


[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=2.0.0"
scipy = ">=1.13.0"
pyshtools = ">=4.14.1"
matplotlib = ">=3.9.0"
pyqt6 = ">=6.11.0"
Cartopy = "^0.25.0"
pygeoinf = ">=1.7.4"
regionmask = "^0.13.0"
cf-xarray = "^0.10.11"
pre-commit = "^4.6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.2.1"
jupyter = "^1.1.1"
furo = "^2025.7.19"
sphinx = "<8.2"
ruff = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# --- Added Ruff Configuration ---
[tool.ruff]



[tool.ruff.lint.per-file-ignores]
# Ignore ambiguous variable name 'l' in physics/spectral code
"pyslfp/core.py" = ["E741"]
"pyslfp/physics.py" = ["E741"]
"pyslfp/linear_operators/*" = ["E741"]
"tests/*" = ["E731", "E741"]

# For the sphere.py file, where 'l' is a common variable name for spherical
# harmonic degree, ignore the ambiguous variable name warning (E741).
#"pygeoinf/symmetric_space/sphere.py" = ["E741"]


[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Overriding `Axes.cla` in GeoAxes is pending deprecation:PendingDeprecationWarning:cartopy.mpl.geoaxes",
]
markers = [
    "slow: marks tests as slow (run with '-m slow' or exclude with '-m \"not slow\"')"
]
addopts = "-m 'not slow'"